// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for code (block) 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #112ebb;
  outline-offset: 2px;
}

.c2 {
  background-color: #f2f2f2;
  border-radius: 0.1rem;
  color: #435a6f;
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

code.c2 {
  padding: 0.1rem 0.2rem;
}

pre.c2 {
  padding: 1rem;
}

<div
  class="c0 c1"
>
  <pre
    class="c2 c1"
  >
    <code>
      test
    </code>
  </pre>
</div>
`;

exports[`renders correctly for code (inline) 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #112ebb;
  outline-offset: 2px;
}

.c2 {
  background-color: #f2f2f2;
  border-radius: 0.1rem;
  color: #435a6f;
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

code.c2 {
  padding: 0.1rem 0.2rem;
}

pre.c2 {
  padding: 1rem;
}

<div
  class="c0 c1"
>
  <code
    class="c2 c1"
  >
    test
  </code>
</div>
`;
